tests/NormalTests/paczka2/big_fuzzy/79626320.err
Error in line 12: LYr5pAQQqub S442 30,01
Error in line 5: LYr5pAQQqub S623 89,6
Error in line 30: LYr5pAQQqub S244 -1,5
Error in line 28: LYr5pAQQqub S244 12,6
Error in line 34: LYr5pAQQqub S442 70,9
Error in line 36: vEU3 S623 68,9
Error in line 50: vEU3 A924 55,0
Error in line 49: zMC S623 36,6
Error in line 67: zMC S244 14,8
Error in line 77: S442 A924 77,4
Error in line 81: S442 S244 8,7
Error in line 70: vEU3 S623 25,4
Error in line 72: ZO03Y A924 26,2
Error in line 96: zMC S442 34,9
Error in line 104: 2usC S442 38,6
Error in line 99: S442 S442 40,8
Error in line 110: ZO03Y S244 30,8
Error in line 119: ZO03Y S623 61,7
Error in line 122: ZO03Y S442 89,0
Error in line 124: ZO03Y S623 96,9
Error in line 126: LYr5pAQQqub S244 97,8
Error in line 157: zMC S623 100,5
Error in line 166: S442 S244 80,63
Error in line 168: 8dY2CO7 S623 19,9
Error in line 183: 2usC S623 274,3
Error in line 185: 2usC A924 3,4
Error in line 193: 2usC S623 53,2
Error in line 199: 2usC A924 UU,5
Error in line 200: 2usC S623 54,5
Error in line 202: 2usC S62 208,7
Error in line 205: S442 S623 60,6
Error in line 212: vEU3 A924 56,2
Error in line 230: 2usC A924 145,8
Error in line 243: 2usC S244 191,10
